--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
                             <a name = "gallery"></a>
                             <h1 id = "strongtext" style = "text-align: left">Gallery:</h1><br>
                             <table>
-                                <tr></tr>
+                                <tr>
+                                    <td><img src = "images/sunset.jpg" class ="img"/><p>A sunset over my roof in Sherman Oaks, CA</p></td>
+                                    <td><img src = "images/buckhorn.jpg" class ="img"/><p>A view alongside the Buckhorn trail.</p></td>
+                                </tr>
+                                <tr>
+                                    <td><img src = "images/orlandosky.jpg" class = "img"/><p>The skys above Disney World, Orlando</p></td>
+                                    <td><video  class = "video" controls><source src="images/fireworks.mp4" type="video/mp4">
+Your browser does not support HTML5 Video Playback</video><p>Fireworks for the 4th of July</p></td>
+                                </tr>
                             </table>
                     </div>
                 </header>
